Fix navbar z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,9 @@ header {
     top: 0;
     width: 100%;
     height: 41px;
-    background-color: white;
     border-bottom: 1px solid #e2e2e2;
+    background-color: white;
+    z-index: 1;
 }
 
 nav {
